--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "css": "sass"
   },
   "scripts": {
+		"compress": "gulp",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
@@ -37,27 +38,32 @@
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.3.3",
+    "@tarojs/react": "3.3.3",
     "@tarojs/runtime": "3.3.3",
     "@tarojs/taro": "3.3.3",
-    "@tarojs/react": "3.3.3",
-    "react-dom": "^17.0.0",
-    "react": "^17.0.0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^17.0.2",
-    "@tarojs/mini-runner": "3.3.3",
     "@babel/core": "^7.8.0",
+    "@tarojs/mini-runner": "3.3.3",
     "@tarojs/webpack-runner": "3.3.3",
-    "babel-preset-taro": "3.3.3",
-    "eslint-config-taro": "3.3.3",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@types/react": "^17.0.2",
+    "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "typescript": "^4.1.0"
+    "@typescript-eslint/parser": "^4.15.1",
+    "babel-preset-taro": "3.3.3",
+    "eslint": "^6.8.0",
+    "eslint-config-taro": "3.3.3",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "gulp": "^4.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-jsonminify": "^1.1.0",
+    "gulp-uglify-es": "^3.0.0",
+    "stylelint": "9.3.0",
+    "typescript": "^4.1.0",
+    "webpack-bundle-analyzer": "^4.4.2"
   }
 }
